needed to switch back to eno1..bond0 won't exist at this point

--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -11,7 +11,7 @@ write_files:
     content: |
       #!/bin/bash
       logger "Create the etcd and fleet config files"
-      PRIV_IP=`ifconfig bond0 | sed -n 2p | awk '{ print $2 }'`
+      PRIV_IP=`ifconfig eno1 | sed -n 2p | awk '{ print $2 }'`
       TARGET_DIR=/run/systemd/system/etcd2.service.d/
       TARGET="$TARGET_DIR/20-settings.conf"
       HOST=`/usr/bin/hostname`
