--- a/coreos/fleet/mesosphere/spark-mesos-dispatcher.service
+++ b/coreos/fleet/mesosphere/spark-mesos-dispatcher.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=spark-mesos-dispatcher
-After=mesos-master-1.service
-Requires=mesos-master-1.service
+After=mesos-master.service
+Requires=mesos-master.service
 
 [Service]
 ExecStart=/usr/local/spark/sbin/start-mesos-dispatcher.sh --master=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos
