--- a/coreos/fleet/mesosphere/mesos-slave.service
+++ b/coreos/fleet/mesosphere/mesos-slave.service
@@ -23,7 +23,7 @@ ExecStart=/usr/bin/docker run --privileged --net=host --name %p --restart=always
  -e MESOS_SWITCH_USER=0 \
  -e MESOS_LOG_DIR=/tmp/log \
  -e MESOS_LOG_LEVEL=INFO \
- -e MESOS_WORK_DIR=/tmp \
+ -e MESOS_WORK_DIR=/tmp/mesos \
  -e MESOS_DOCKER_SOCK=/var/run/docker.sock \
  -e MESOS_ISOLATION=cgroups/cpu,cgroups/mem \
  -e MESOS_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos \
