--- a/coreos/fleet/mesosphere/mesos-slave.service
+++ b/coreos/fleet/mesosphere/mesos-slave.service
@@ -30,6 +30,7 @@ ExecStart=/usr/bin/docker run --privileged --net=host --name %p --restart=always
  -e MESOS_CONTAINERIZERS=docker,mesos \
  -e MESOS_HOSTNAME=%H.dsra.local \
  -e MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins \
+ -e MESOS_HADOOP_HOME=/usr/local/hadoop \
  -e CLUSTER_NAME=dsra \
  -e NNODE1_IP=r105u01.dsra.local \
  -e NNODE2_IP=r105u03.dsra.local \
