--- a/docker/bamboo/haproxy_template.cfg
+++ b/docker/bamboo/haproxy_template.cfg
@@ -43,10 +43,15 @@ frontend http-in
         use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
         {{ else }}
 
-        # This is the default proxy criteria
-        acl {{ $app.EscapedId }}-aclrule path_beg -i {{ $app.Id }}
+        # This is the new default proxy criteria
+        acl {{ $app.EscapedId }}-aclrule hdr_beg(host) -i {{ $app.EscapeId }}
         use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
         {{ end }} {{ end }}
+
+        # This is the default proxy criteria
+        #acl {{ $app.EscapedId }}-aclrule path_beg -i {{ $app.Id }}
+        #use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
+        #{{ end }} {{ end }}
 
         stats enable
         # CHANGE: Your stats credentials
