Fixes for working bamboo configuration

--- a/docker/bamboo/haproxy_template.cfg
+++ b/docker/bamboo/haproxy_template.cfg
@@ -44,14 +44,9 @@ frontend http-in
         {{ else }}
 
         # This is the new default proxy criteria
-        acl {{ $app.EscapedId }}-aclrule hdr_beg(host) -i {{ $app.EscapeId }}
+        acl {{ $app.EscapedId }}-aclrule hdr_beg(host) -i {{ $app.EscapedId }}
         use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
         {{ end }} {{ end }}
-
-        # This is the default proxy criteria
-        #acl {{ $app.EscapedId }}-aclrule path_beg -i {{ $app.Id }}
-        #use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
-        #{{ end }} {{ end }}
 
         stats enable
         # CHANGE: Your stats credentials
