--- a/coreos/fleet/kafka.service
+++ b/coreos/fleet/kafka.service
@@ -11,6 +11,7 @@ ExecStartPre=-/usr/bin/docker rm -v %p
 ExecStart=/usr/bin/bash -c "/usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald \
  --volumes-from kafka-data \
  -e BROKER_ID=`/usr/bin/ifconfig bond0 | /usr/bin/sed -n 2p | /usr/bin/awk '{ print $2 }' | cut -d . -f 4` \
+ -e DELETE_TOPIC_ENABLE=true \
  -e CLUSTER_NAME=dsra \
  -e ZK_IPS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181 \
  -e ADVERTISED_HOST_NAME=%H.dsra.local \
