Updated haproxy script. Formats marathon application id to mimic mesos dns fully qualified name

--- a/docker/bamboo/haproxy_template.cfg
+++ b/docker/bamboo/haproxy_template.cfg
@@ -33,6 +33,25 @@ defaults
         errorfile 503 /etc/haproxy/errors/503.http
         errorfile 504 /etc/haproxy/errors/504.http
 
+{{
+   import "strings"
+
+   func reverse_format( id string ) string {
+
+      var named_components = strings.Split(id[1:], "/")
+      var num_components = len(named_components)
+
+      var temp = make([]string, num_components)
+
+      for i:=0; i<num_components; i++ {
+         temp[i] = named_components[num_components-i-1]
+      }    
+
+      return strings.Join(temp,"_") + ".marathon.mesos"
+
+   }
+}}
+
 
 # Template Customization
 frontend http-in
@@ -43,8 +62,8 @@ frontend http-in
         use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
         {{ else }}
 
-        # This is the new default proxy criteria
-        acl {{ $app.EscapedId }}-aclrule hdr_beg(host) -i {{ $app.EscapedId }}
+        # This is the new default proxy criteri
+        acl {{ $app.EscapedId }}-aclrule hdr_beg(host) -i {{ reverse_format $app.Id }}
         use_backend {{ $app.EscapedId }}-cluster if {{ $app.EscapedId }}-aclrule
         {{ end }} {{ end }}
 
