Modified haproxy configuration with load balancing for haproxy/bamboo setup

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -23,6 +23,9 @@ frontend hub
     use_backend mesos_ui if is_mesos_uri 
     use_backend marathon_uis if is_marathon_uri
 
+    acl is_marathon_app hdr(host) -i marathon.mesos
+    use_backend bamboo_haproxy if is_marathon_app
+
 backend marathon_uis
     balance roundrobin
     server marathon1 10.105.0.1
@@ -38,3 +41,17 @@ backend mesos_ui
     server mesos9 10.105.0.9:5050 backup
     server mesos3 10.105.0.3:5050 backup
     server mesos1 10.105.0.1:5050 backup
+
+backend bamboo_haproxy
+    balance roundrobin
+    server worker01 10.105.0.11:31180 check
+    server worker02 10.105.0.13:31180 check
+    server worker03 10.105.0.15:31180 check
+    server worker04 10.105.0.17:31180 check
+    server worker05 10.105.0.19:31180 check
+    server worker06 10.105.0.21:31180 check
+    server worker07 10.105.0.25:31180 check
+    server worker08 10.105.0.27:31180 check
+    server worker09 10.105.0.29:31180 check
+    server worker10 10.105.0.31:31180 check
+    server worker11 10.105.0.33:31180 check
