Updated haproxy config

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -7,7 +7,7 @@
 
 global
     maxconn 100
-#    debug
+    debug
 
 defaults
     mode http
@@ -18,13 +18,17 @@ defaults
     
 frontend hub
     bind *:80
-    acl is_mesos_uri hdr(host) -i mesos
-    acl is_marathon_uri hdr(host) -i marathon
-    use_backend mesos_ui if is_mesos_uri 
-    use_backend marathon_uis if is_marathon_uri
 
+    log /dev/log local0 debug
+    
     acl is_marathon_app hdr(host) -i marathon.mesos
     use_backend bamboo_haproxy if is_marathon_app
+
+    acl is_mesos_uri hdr(host) -i mesos
+    acl is_marathon_uri hdr(host) -i marathon
+
+    use_backend mesos_ui if is_mesos_uri 
+    use_backend marathon_uis if is_marathon_uri
 
 backend marathon_uis
     balance roundrobin
