Working haproxy confgiuration that now fowrards for all marathon.mesos host names. Need to solve error on bamboo servers

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -11,17 +11,23 @@ global
 
 defaults
     mode http
-    log global
-    timeout connect 5s
+
+    timeout connect 30s
     timeout client 2m
     timeout server 2m
     
 frontend hub
     bind *:80
 
-    log /dev/log local0 debug
+    option tcplog
+    option forwardfor
+
+    log global
+    log 127.0.0.1 local0
+
+    # log /dev/log local0 debug
     
-    acl is_marathon_app hdr(host) -i marathon.mesos
+    acl is_marathon_app hdr_end(host) -i marathon.mesos
     use_backend bamboo_haproxy if is_marathon_app
 
     acl is_mesos_uri hdr(host) -i mesos
@@ -58,4 +64,4 @@ backend bamboo_haproxy
     server worker08 10.105.0.27:31180 check
     server worker09 10.105.0.29:31180 check
     server worker10 10.105.0.31:31180 check
-    server worker11 10.105.0.33:31180 check
+    #server worker11 10.105.0.33:31180 check
