--- a/coreos/fleet/mesosphere/marathon.service
+++ b/coreos/fleet/mesosphere/marathon.service
@@ -15,7 +15,7 @@ ExecStart=/usr/bin/docker run --name %p --rm --net=host \
  -e MARATHON_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos \
  -e MARATHON_TASK_LAUNCH_CONFIRM_TIMEOUT=60000 \
  -e MARATHON_TASK_LAUNCH_TIMEOUT=300000 \
- mesosphere/marathon:v0.13.0 --checkpoint
+ mesosphere/marathon:v0.15.0-RC2 --checkpoint
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
