--- a/coreos/fleet/mesosphere/mesos-slave.service
+++ b/coreos/fleet/mesosphere/mesos-slave.service
@@ -10,7 +10,7 @@ ExecStartPre=-/usr/bin/docker rm -v %p
 ExecStartPre=/usr/bin/docker pull hub.dsra.local:5000/dsra/mesos-slave:0.26.0-0.2.145.ubuntu1404
 ExecStart=/usr/bin/docker run --privileged --net=host --name %p --restart=always \
  -v /etc/docker.tar.gz:/etc/docker.tar.gz \
- -v /sys:/sys -v /tmp:/tmp -v /mesos:/tmp/mesos \
+ -v /sys:/sys -v /tmp:/tmp -v /tmp/mesos:/tmp/mesos \
  -v /usr/bin/docker:/bin/docker \
  -v /var/run/docker.sock:/var/run/docker.sock \
  -v /lib64/libdevmapper.so.1.02:/usr/lib/libdevmapper.so.1.02:ro \
