Latest mesos-dns deployment

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -23,7 +23,7 @@ frontend hub
     option forwardfor
 
     log global
-    log 127.0.0.1 local0
+    log 127.0.0.1 local0 debug
 
     # log /dev/log local0 debug
     
@@ -46,6 +46,8 @@ backend marathon_uis
 
 backend mesos_ui
     balance roundrobin
+    option forwardfor
+    option httpclose
     server mesos5 10.105.0.5:5050 check
     server mesos7 10.105.0.7:5050 backup
     server mesos9 10.105.0.9:5050 backup
@@ -53,15 +55,18 @@ backend mesos_ui
     server mesos1 10.105.0.1:5050 backup
 
 backend bamboo_haproxy
+    mode http
     balance roundrobin
-    server worker01 10.105.0.11:31180 check
-    server worker02 10.105.0.13:31180 check
+    option forwardfor
+    option httpclose
+    # server worker01 10.105.0.11:31180 check
+    #server worker02 10.105.0.13:31180 check
     server worker03 10.105.0.15:31180 check
-    server worker04 10.105.0.17:31180 check
-    server worker05 10.105.0.19:31180 check
-    server worker06 10.105.0.21:31180 check
-    server worker07 10.105.0.25:31180 check
-    server worker08 10.105.0.27:31180 check
-    server worker09 10.105.0.29:31180 check
-    server worker10 10.105.0.31:31180 check
+    #server worker04 10.105.0.17:31180 check
+    #server worker05 10.105.0.19:31180 check
+    #server worker06 10.105.0.21:31180 check
+    #server worker07 10.105.0.25:31180 check
+    #server worker08 10.105.0.27:31180 check
+    #server worker09 10.105.0.29:31180 check
+    #server worker10 10.105.0.31:31180 check
     #server worker11 10.105.0.33:31180 check
