Updgrade to Mesos 0.27, and Spark 1.6

--- a/docker/mesos-slave/Dockerfile
+++ b/docker/mesos-slave/Dockerfile
@@ -1,4 +1,4 @@
-FROM mesosphere/mesos-slave:0.26.0-0.2.145.ubuntu1404
+FROM mesosphere/mesos-slave:0.27.0-0.2.190.ubuntu1404
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
 
 # Setup env
@@ -13,12 +13,12 @@ ENV HADOOP_HDFS_HOME /usr/local/hadoop
 ENV HADOOP_CONF_DIR /usr/local/hadoop/etc/hadoop
 
 # download wget, java & hadoop and spark
-RUN apt-get -y update && \
+RUN  apt-get -y update && \
  apt-get install -y openjdk-7-jdk wget && \
  wget -q -O - http://apache.mirrors.pair.com/hadoop/common/hadoop-2.7.1/hadoop-2.7.1.tar.gz | tar -xzf - -C /usr/local && \
- wget -q -O - http://apache.arvixe.com/spark/spark-1.5.2/spark-1.5.2-bin-hadoop2.6.tgz | tar -xzf - -C /usr/local && \
+ wget -q -O - http://d3kbcqa49mib13.cloudfront.net/spark-1.6.0-bin-hadoop2.6.tgz | tar -xzf - -C /usr/local && \
  ln -s /usr/local/hadoop-2.7.1 /usr/local/hadoop && \
- ln -s /usr/local/spark-1.5.2-bin-hadoop2.6 /usr/local/spark
+ ln -s /usr/local/spark-1.6.0-bin-hadoop2.6 /usr/local/spark
 
 # Copy the Site files up
 WORKDIR /usr/local/hadoop
