--- a/client/Vagrantfile
+++ b/client/Vagrantfile
@@ -11,6 +11,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider "virtualbox" do |v|
     v.memory = 4096
     v.cpus = 2
+    v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
   end
 
   # Original starting point of the base box, and deploy script
@@ -24,7 +25,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provision "file", source: "./hadoop/hdfs-site.xml.template", destination: "/tmp/hdfs-site.xml.template"
   config.vm.provision "file", source: "./hadoop/core-site.xml.template", destination: "/tmp/core-site.xml.template"
   config.vm.provision :shell, :path => "configure.sh"
-  config.vm.synced_folder "./spark", "/usr/local/spark/conf"
+
+  config.vm.synced_folder "./spark", "/opt/spark/conf"
 
   #  iPython Notebook forwarded port
   #config.vm.network "forwarded_port", guest: 8888, host: 18888
