--- a/docker/mesos-dns/config.json
+++ b/docker/mesos-dns/config.json
@@ -1,23 +1,21 @@
-{ 
-  "zk": "zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos", 
-  "refreshSeconds": 60, 
-  "ttl": 60, 
-  "domain":  "mesos", 
-  "ns": "ns1",
-  "port": 8053, 
-  "resolvers": [], 
-  "timeout": 5, 
-  "httpon": true, 
-  "dsnon": true, 
-  "httpport": 8123, 
-  "externalon": false, 
-  "listener": "0.0.0.0", 
-  "SOAMname": "ns1.mesos", 
-  "SOARname": "root.ns1.mesos", 
-  "SOARefresh": 60, 
-  "SOARetry": 600, 
-  "iSOAExpire": 86400, 
-  "SOAMinttl": 60,
-  "recurseon": true,
-  "IPSources" : ["netinfo","mesos","host"]
+{
+  "zk": "%%MESOS_ZK%%",
+  "refreshSeconds": %%REFRESH%%,
+  "ttl": %%REFRESH%%,
+  "domain": "mesos",
+  "port": 53,
+  "resolvers": %%EXTERNAL_DNS_SERVERS%%,
+  "timeout": %%TIMEOUT%%, 
+  "httpon": %%HTTP_ON%%,
+  "dnson": true,
+  "httpport": %%HTTP_PORT%%,
+  "externalon": true,
+  "listener": "%%IP%%",
+  "SOAMname": "ns1.mesos",
+  "SOARname": "root.ns1.mesos",
+  "SOARefresh": %%REFRESH%%,
+  "SOARetry":   600,
+  "SOAExpire":  86400,
+  "SOAMinttl": %%REFRESH%%,
+  "IPSources": %%IP_SOURCES%%
 }
