--- a/coreos/fleet/mesosphere/mesos-consul.service
+++ b/coreos/fleet/mesosphere/mesos-consul.service
@@ -7,15 +7,14 @@ Requires=docker.service
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -v %p
 ExecStartPre=/usr/bin/docker pull ciscocloud/mesos-consul:latest
-ExecStart=/usr/bin/docker run --name %p --rm \
-                              ciscocloud/mesos-consul:latest \
+ExecStart=/usr/bin/docker run --name %p --rm ciscocloud/mesos-consul:latest \
                               --zk=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos 
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
 [X-Fleet]
 Global=true
-MachineMetadata=role=service
+MachineMetadata=role=worker
 
 
 
