Fixe for "file name too long"
https://github.com/yahoo/kafka-manager/issues/76

--- a/docker/kafka-manager/Dockerfile
+++ b/docker/kafka-manager/Dockerfile
@@ -9,8 +9,12 @@ RUN mkdir -p /tmp && \
     cd /tmp && \
     git clone https://github.com/yahoo/kafka-manager && \
     cd /tmp/kafka-manager && \
-    git checkout ${KM_REVISION} && \
-    sbt clean dist && \
+    git checkout ${KM_REVISION}
+
+# Fix for long class names
+RUN echo "scalacOptions ++= Seq(\"-Xmax-classfile-name\", \"200\")" >> /tmp/kafka-manager/build.sbt
+
+RUN sbt clean dist && \
     unzip  -d / ./target/universal/kafka-manager-${KM_VERSION}.zip && \
     rm -fr /tmp/*
 
